Added soils data to csv files containing GPS points from Oregon and Washington (only)

--- a/data/schema.ini
+++ b/data/schema.ini
@@ -158,3 +158,339 @@ Col52=muaggatt_forpehrtdcp Text Width 254
 Col53=muaggatt_hydclprs Text Width 254
 Col54=muaggatt_awmmfpwwta Single
 Col55=muaggatt_mukey Text Width 30
+[Oregon_GPS_Soils_Data_muagget_component.csv]
+Format=CSVDelimited
+ColNameHeader=True
+Col1=OID_ Long
+Col2=field_1 Long
+Col3=ID2 Long
+Col4=lat Double
+Col5=long Double
+Col6=el Text Width 8000
+Col7=Aspect Double
+Col8=Profilecurv Double
+Col9=Tangentialc Double
+Col10=Slope Double
+Col11=PNWSRTMDEM Double
+Col12=RASTERVALU Single
+Col13=VAT_MapunitRaster_10m_Count Double
+Col14=VAT_MapunitRaster_10m_MUKEY Text Width 30
+Col15=muaggatt_OBJECTID Long
+Col16=muaggatt_musym Text Width 6
+Col17=muaggatt_muname Text Width 240
+Col18=muaggatt_mustatus Text Width 254
+Col19=muaggatt_slopegraddcp Single
+Col20=muaggatt_slopegradwta Single
+Col21=muaggatt_brockdepmin Short
+Col22=muaggatt_wtdepannmin Short
+Col23=muaggatt_wtdepaprjunmin Short
+Col24=muaggatt_flodfreqdcd Text Width 254
+Col25=muaggatt_flodfreqmax Text Width 254
+Col26=muaggatt_pondfreqprs Text Width 254
+Col27=muaggatt_aws025wta Single
+Col28=muaggatt_aws050wta Single
+Col29=muaggatt_aws0100wta Single
+Col30=muaggatt_aws0150wta Single
+Col31=muaggatt_drclassdcd Text Width 254
+Col32=muaggatt_drclasswettest Text Width 254
+Col33=muaggatt_hydgrpdcd Text Width 254
+Col34=muaggatt_iccdcd Text Width 254
+Col35=muaggatt_iccdcdpct Short
+Col36=muaggatt_niccdcd Text Width 254
+Col37=muaggatt_niccdcdpct Short
+Col38=muaggatt_engdwobdcd Text Width 254
+Col39=muaggatt_engdwbdcd Text Width 254
+Col40=muaggatt_engdwbll Text Width 254
+Col41=muaggatt_engdwbml Text Width 254
+Col42=muaggatt_engstafdcd Text Width 254
+Col43=muaggatt_engstafll Text Width 254
+Col44=muaggatt_engstafml Text Width 254
+Col45=muaggatt_engsldcd Text Width 254
+Col46=muaggatt_engsldcp Text Width 254
+Col47=muaggatt_englrsdcd Text Width 254
+Col48=muaggatt_engcmssdcd Text Width 254
+Col49=muaggatt_engcmssmp Text Width 254
+Col50=muaggatt_urbrecptdcd Text Width 254
+Col51=muaggatt_urbrecptwta Single
+Col52=muaggatt_forpehrtdcp Text Width 254
+Col53=muaggatt_hydclprs Text Width 254
+Col54=muaggatt_awmmfpwwta Single
+Col55=muaggatt_mukey Text Width 30
+Col56=component_OBJECTID Long
+Col57=component_comppct_l Short
+Col58=component_comppct_r Short
+Col59=component_comppct_h Short
+Col60=component_compname Text Width 60
+Col61=component_compkind Text Width 254
+Col62=component_majcompflag Text Width 3
+Col63=component_otherph Text Width 40
+Col64=component_localphase Text Width 40
+Col65=component_slope_l Single
+Col66=component_slope_r Single
+Col67=component_slope_h Single
+Col68=component_slopelenusle_l Short
+Col69=component_slopelenusle_r Short
+Col70=component_slopelenusle_h Short
+Col71=component_runoff Text Width 254
+Col72=component_tfact Short
+Col73=component_wei Text Width 254
+Col74=component_weg Text Width 254
+Col75=component_erocl Text Width 254
+Col76=component_earthcovkind1 Text Width 254
+Col77=component_earthcovkind2 Text Width 254
+Col78=component_hydricon Text Width 254
+Col79=component_hydricrating Text Width 254
+Col80=component_drainagecl Text Width 254
+Col81=component_elev_l Single
+Col82=component_elev_r Single
+Col83=component_elev_h Single
+Col84=component_aspectccwise Short
+Col85=component_aspectrep Short
+Col86=component_aspectcwise Short
+Col87=component_geomdesc Text Width 2147483647
+Col88=component_albedodry_l Single
+Col89=component_albedodry_r Single
+Col90=component_albedodry_h Single
+Col91=component_airtempa_l Single
+Col92=component_airtempa_r Single
+Col93=component_airtempa_h Single
+Col94=component_map_l Short
+Col95=component_map_r Short
+Col96=component_map_h Short
+Col97=component_reannualprecip_l Short
+Col98=component_reannualprecip_r Short
+Col99=component_reannualprecip_h Short
+Col100=component_ffd_l Short
+Col101=component_ffd_r Short
+Col102=component_ffd_h Short
+Col103=component_nirrcapcl Text Width 254
+Col104=component_nirrcapscl Text Width 254
+Col105=component_nirrcapunit Short
+Col106=component_irrcapcl Text Width 254
+Col107=component_irrcapscl Text Width 254
+Col108=component_irrcapunit Short
+Col109=component_cropprodindex Short
+Col110=component_constreeshrubgrp Text Width 254
+Col111=component_wndbrksuitgrp Text Width 254
+Col112=component_rsprod_l Long
+Col113=component_rsprod_r Long
+Col114=component_rsprod_h Long
+Col115=component_foragesuitgrpid Text Width 11
+Col116=component_wlgrain Text Width 254
+Col117=component_wlgrass Text Width 254
+Col118=component_wlherbaceous Text Width 254
+Col119=component_wlshrub Text Width 254
+Col120=component_wlconiferous Text Width 254
+Col121=component_wlhardwood Text Width 254
+Col122=component_wlwetplant Text Width 254
+Col123=component_wlshallowwat Text Width 254
+Col124=component_wlrangeland Text Width 254
+Col125=component_wlopenland Text Width 254
+Col126=component_wlwoodland Text Width 254
+Col127=component_wlwetland Text Width 254
+Col128=component_soilslippot Text Width 254
+Col129=component_frostact Text Width 254
+Col130=component_initsub_l Short
+Col131=component_initsub_r Short
+Col132=component_initsub_h Short
+Col133=component_totalsub_l Short
+Col134=component_totalsub_r Short
+Col135=component_totalsub_h Short
+Col136=component_hydgrp Text Width 254
+Col137=component_corcon Text Width 254
+Col138=component_corsteel Text Width 254
+Col139=component_taxclname Text Width 120
+Col140=component_taxorder Text Width 254
+Col141=component_taxsuborder Text Width 254
+Col142=component_taxgrtgroup Text Width 254
+Col143=component_taxsubgrp Text Width 254
+Col144=component_taxpartsize Text Width 254
+Col145=component_taxpartsizemod Text Width 254
+Col146=component_taxceactcl Text Width 254
+Col147=component_taxreaction Text Width 254
+Col148=component_taxtempcl Text Width 254
+Col149=component_taxmoistscl Text Width 254
+Col150=component_taxtempregime Text Width 254
+Col151=component_soiltaxedition Text Width 254
+Col152=component_castorieindex Short
+Col153=component_flecolcomnum Text Width 5
+Col154=component_flhe Text Width 3
+Col155=component_flphe Text Width 3
+Col156=component_flsoilleachpot Text Width 254
+Col157=component_flsoirunoffpot Text Width 254
+Col158=component_fltemik2use Text Width 3
+Col159=component_fltriumph2use Text Width 3
+Col160=component_indraingrp Text Width 3
+Col161=component_innitrateleachi Short
+Col162=component_misoimgmtgrp Text Width 254
+Col163=component_vasoimgtgrp Text Width 254
+Col164=component_mukey Text Width 30
+Col165=component_cokey Text Width 30
+[Washington_GPS_Soils_Data_muaggatt_component.csv]
+Format=CSVDelimited
+ColNameHeader=True
+Col1=OID_ Long
+Col2=field_1 Long
+Col3=ID2 Long
+Col4=lat Double
+Col5=long Double
+Col6=el Text Width 8000
+Col7=Aspect Double
+Col8=Profilecurv Double
+Col9=Tangentialc Double
+Col10=Slope Double
+Col11=PNWSRTMDEM Double
+Col12=RASTERVALU Single
+Col13=VAT_MapunitRaster_10m_Count Double
+Col14=VAT_MapunitRaster_10m_MUKEY Text Width 30
+Col15=muaggatt_OBJECTID Long
+Col16=muaggatt_musym Text Width 6
+Col17=muaggatt_muname Text Width 240
+Col18=muaggatt_mustatus Text Width 254
+Col19=muaggatt_slopegraddcp Single
+Col20=muaggatt_slopegradwta Single
+Col21=muaggatt_brockdepmin Short
+Col22=muaggatt_wtdepannmin Short
+Col23=muaggatt_wtdepaprjunmin Short
+Col24=muaggatt_flodfreqdcd Text Width 254
+Col25=muaggatt_flodfreqmax Text Width 254
+Col26=muaggatt_pondfreqprs Text Width 254
+Col27=muaggatt_aws025wta Single
+Col28=muaggatt_aws050wta Single
+Col29=muaggatt_aws0100wta Single
+Col30=muaggatt_aws0150wta Single
+Col31=muaggatt_drclassdcd Text Width 254
+Col32=muaggatt_drclasswettest Text Width 254
+Col33=muaggatt_hydgrpdcd Text Width 254
+Col34=muaggatt_iccdcd Text Width 254
+Col35=muaggatt_iccdcdpct Short
+Col36=muaggatt_niccdcd Text Width 254
+Col37=muaggatt_niccdcdpct Short
+Col38=muaggatt_engdwobdcd Text Width 254
+Col39=muaggatt_engdwbdcd Text Width 254
+Col40=muaggatt_engdwbll Text Width 254
+Col41=muaggatt_engdwbml Text Width 254
+Col42=muaggatt_engstafdcd Text Width 254
+Col43=muaggatt_engstafll Text Width 254
+Col44=muaggatt_engstafml Text Width 254
+Col45=muaggatt_engsldcd Text Width 254
+Col46=muaggatt_engsldcp Text Width 254
+Col47=muaggatt_englrsdcd Text Width 254
+Col48=muaggatt_engcmssdcd Text Width 254
+Col49=muaggatt_engcmssmp Text Width 254
+Col50=muaggatt_urbrecptdcd Text Width 254
+Col51=muaggatt_urbrecptwta Single
+Col52=muaggatt_forpehrtdcp Text Width 254
+Col53=muaggatt_hydclprs Text Width 254
+Col54=muaggatt_awmmfpwwta Single
+Col55=muaggatt_mukey Text Width 30
+Col56=component_OBJECTID Long
+Col57=component_comppct_l Short
+Col58=component_comppct_r Short
+Col59=component_comppct_h Short
+Col60=component_compname Text Width 60
+Col61=component_compkind Text Width 254
+Col62=component_majcompflag Text Width 3
+Col63=component_otherph Text Width 40
+Col64=component_localphase Text Width 40
+Col65=component_slope_l Single
+Col66=component_slope_r Single
+Col67=component_slope_h Single
+Col68=component_slopelenusle_l Short
+Col69=component_slopelenusle_r Short
+Col70=component_slopelenusle_h Short
+Col71=component_runoff Text Width 254
+Col72=component_tfact Short
+Col73=component_wei Text Width 254
+Col74=component_weg Text Width 254
+Col75=component_erocl Text Width 254
+Col76=component_earthcovkind1 Text Width 254
+Col77=component_earthcovkind2 Text Width 254
+Col78=component_hydricon Text Width 254
+Col79=component_hydricrating Text Width 254
+Col80=component_drainagecl Text Width 254
+Col81=component_elev_l Single
+Col82=component_elev_r Single
+Col83=component_elev_h Single
+Col84=component_aspectccwise Short
+Col85=component_aspectrep Short
+Col86=component_aspectcwise Short
+Col87=component_geomdesc Text Width 2147483647
+Col88=component_albedodry_l Single
+Col89=component_albedodry_r Single
+Col90=component_albedodry_h Single
+Col91=component_airtempa_l Single
+Col92=component_airtempa_r Single
+Col93=component_airtempa_h Single
+Col94=component_map_l Short
+Col95=component_map_r Short
+Col96=component_map_h Short
+Col97=component_reannualprecip_l Short
+Col98=component_reannualprecip_r Short
+Col99=component_reannualprecip_h Short
+Col100=component_ffd_l Short
+Col101=component_ffd_r Short
+Col102=component_ffd_h Short
+Col103=component_nirrcapcl Text Width 254
+Col104=component_nirrcapscl Text Width 254
+Col105=component_nirrcapunit Short
+Col106=component_irrcapcl Text Width 254
+Col107=component_irrcapscl Text Width 254
+Col108=component_irrcapunit Short
+Col109=component_cropprodindex Short
+Col110=component_constreeshrubgrp Text Width 254
+Col111=component_wndbrksuitgrp Text Width 254
+Col112=component_rsprod_l Long
+Col113=component_rsprod_r Long
+Col114=component_rsprod_h Long
+Col115=component_foragesuitgrpid Text Width 11
+Col116=component_wlgrain Text Width 254
+Col117=component_wlgrass Text Width 254
+Col118=component_wlherbaceous Text Width 254
+Col119=component_wlshrub Text Width 254
+Col120=component_wlconiferous Text Width 254
+Col121=component_wlhardwood Text Width 254
+Col122=component_wlwetplant Text Width 254
+Col123=component_wlshallowwat Text Width 254
+Col124=component_wlrangeland Text Width 254
+Col125=component_wlopenland Text Width 254
+Col126=component_wlwoodland Text Width 254
+Col127=component_wlwetland Text Width 254
+Col128=component_soilslippot Text Width 254
+Col129=component_frostact Text Width 254
+Col130=component_initsub_l Short
+Col131=component_initsub_r Short
+Col132=component_initsub_h Short
+Col133=component_totalsub_l Short
+Col134=component_totalsub_r Short
+Col135=component_totalsub_h Short
+Col136=component_hydgrp Text Width 254
+Col137=component_corcon Text Width 254
+Col138=component_corsteel Text Width 254
+Col139=component_taxclname Text Width 120
+Col140=component_taxorder Text Width 254
+Col141=component_taxsuborder Text Width 254
+Col142=component_taxgrtgroup Text Width 254
+Col143=component_taxsubgrp Text Width 254
+Col144=component_taxpartsize Text Width 254
+Col145=component_taxpartsizemod Text Width 254
+Col146=component_taxceactcl Text Width 254
+Col147=component_taxreaction Text Width 254
+Col148=component_taxtempcl Text Width 254
+Col149=component_taxmoistscl Text Width 254
+Col150=component_taxtempregime Text Width 254
+Col151=component_soiltaxedition Text Width 254
+Col152=component_castorieindex Short
+Col153=component_flecolcomnum Text Width 5
+Col154=component_flhe Text Width 3
+Col155=component_flphe Text Width 3
+Col156=component_flsoilleachpot Text Width 254
+Col157=component_flsoirunoffpot Text Width 254
+Col158=component_fltemik2use Text Width 3
+Col159=component_fltriumph2use Text Width 3
+Col160=component_indraingrp Text Width 3
+Col161=component_innitrateleachi Short
+Col162=component_misoimgmtgrp Text Width 254
+Col163=component_vasoimgtgrp Text Width 254
+Col164=component_mukey Text Width 30
+Col165=component_cokey Text Width 30
