Updated topo extraction instructions

--- a/data/schema.ini
+++ b/data/schema.ini
@@ -327,3 +327,6 @@ Col157=compon_105 Text Width 254
 Col158=compon_106 Text Width 254
 Col159=compon_107 Text Width 30
 Col160=compon_108 Text Width 30
+[gps1500forArcGIS_topo.csv]
+Col3=lat Text
+Col4=long Text
